--- a/res/lang/ru.yml
+++ b/res/lang/ru.yml
@@ -1,3 +1,12 @@
 login: 'Логин'
+email: 'Email'
 password: 'Пароль'
+password_confirm: 'Подтверждение пароля'
 sign_in: 'Войти'
+sign_in_form_propose: "Ещё не зарегистрированы? <a href=\":url\">Создайте</a> собственный аккаунт."
+sign_up: 'Создать аккаунт'
+sign_up_form_propose: "Уже зарегистрированы? <a href=\":url\">Войдите</a>."
+passwords_not_match: 'Пароли не совпадают'
+login_already_taken: 'Этот email уже занят, попробуйте другой'
+first_name: 'Имя'
+last_name: 'Фамилия'
